[package]
name = "flexi-parse"
version = "0.7.0"
edition = "2021"
description = "Simple, flexible parsing"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/flexi-parse/latest/"
keywords = ["parsing", "parse"]
categories = ["parsing"]
repository = "https://github.com/Spartan2909/flexi-parse"

[dependencies]
ariadne = { version = "0.3", optional = true }
concat-idents = "1"
proc-macro2 = { version = "1.0", optional = true }

[features]
default = ["ariadne"]
ariadne = ["dep:ariadne"]
proc-macro = ["proc-macro2", "proc-macro2/proc-macro"]
proc-macro2 = ["dep:proc-macro2"]

[[example]]
name = "calc"
test = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]
