[package]
name = "flexi-parse"
version = "0.10.0"
edition = "2021"
description = "Simple, flexible parsing"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/flexi-parse/latest/"
keywords = ["parsing", "parse"]
categories = ["parsing"]
repository = "https://github.com/Spartan2909/flexi-parse"

[dependencies]
ariadne = { version = "0.3", optional = true }
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1", default-features = false, optional = true }

[features]
default = ["ariadne", "scan-strings"]
ariadne = ["dep:ariadne"]
proc-macro = ["proc-macro2", "proc-macro2/proc-macro", "quote/proc-macro"]
proc-macro2 = ["dep:proc-macro2", "dep:quote", "scan-strings"]
scan-strings = []

[[example]]
name = "calc"
test = true

[[example]]
name = "lox"
test = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
implicit_hasher = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
too_many_lines = "allow"
use_self = "allow"
